force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/SM_CalculPrestationMatrice__mdt.object-meta.xml
<CustomObject>
    <description>@description: Un customMetaData qui contient la matrice qui sert pour le calcul des codes de  prestation 
@projet: smile</description>
    <label>SM_CalculPrestationMatrice</label>
    <pluralLabel>SM_CalculPrestationMatrice</pluralLabel>
</CustomObject>