force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Choix_Proc_Egal_Repri_MHS__c.field-meta.xml
<CustomField>
    <fullName>Choix_Proc_Egal_Repri_MHS__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Choix_Proc_Egal_Repri_MHS</description>
    <label>Choix_Proc_Egal_Repri_MHS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>