force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Choix_Proc_intev_ou_gaz_interv_ops__c.field-meta.xml
<CustomField>
    <fullName>Choix_Proc_intev_ou_gaz_interv_ops__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Choix_Proc_intev_ou_gaz_interv_ops</description>
    <label>Choix_Proc_intev_ou_gaz_interv_ops</label>
    <length>255</length>
    <type>Text</type>
</CustomField>