force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Code_prestation__c.field-meta.xml
<CustomField>
    <fullName>Code_prestation__c</fullName>
    <description>Code prestation</description>
    <label>Code prestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>