force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/ConsommationSansfournisseur__c.field-meta.xml
<CustomField>
    <fullName>ConsommationSansfournisseur__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>ConsommationSansfournisseur</description>
    <label>ConsommationSansfournisseur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>