force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Date_refus_telereleve__c.field-meta.xml
<CustomField>
    <fullName>Date_refus_telereleve__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Date refus télérelève</description>
    <label>Date refus télérelève</label>
    <length>255</length>
    <type>Text</type>
</CustomField>