force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/DGI__c.field-meta.xml
<CustomField>
    <fullName>DGI__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>DGI</description>
    <label>DGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>