force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Etat_compteur__c.field-meta.xml
<CustomField>
    <fullName>Etat_compteur__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Etat compteur</description>
    <label>Etat compteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>