force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Etat_PDL_PCE__c.field-meta.xml
<CustomField>
    <fullName>Etat_PDL_PCE__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Etat_PDL_PCE</description>
    <label>Etat PDL PCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>