force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Express__c.field-meta.xml
<CustomField>
    <fullName>Express__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Express</description>
    <label>Express</label>
    <length>255</length>
    <type>Text</type>
</CustomField>