force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Fraude__c.field-meta.xml
<CustomField>
    <fullName>Fraude__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Fraude</description>
    <label>Fraude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>