force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Libelle_code_prestation__c.field-meta.xml
<CustomField>
    <fullName>Libelle_code_prestation__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Libellé code prestation</description>
    <label>Libellé code prestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>