force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/MHs_en_cours__c.field-meta.xml
<CustomField>
    <fullName>MHs_en_cours__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>MHs en cours</description>
    <label>MHs en cours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>