force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Proc_Autorel_ou_Autorel_Oblig__c.field-meta.xml
<CustomField>
    <fullName>Proc_Autorel_ou_Autorel_Oblig__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Proc_Autorel_ou_Autorel_Oblig</description>
    <label>Proc_Autorel_ou_Autorel_Oblig</label>
    <length>255</length>
    <type>Text</type>
</CustomField>