force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Secteur_activite__c.field-meta.xml
<CustomField>
    <fullName>Secteur_activite__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <label>Secteur_activite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>