force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Situation_de_vente__c.field-meta.xml
<CustomField>
    <fullName>Situation_de_vente__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Situation de vente</description>
    <label>Situation de vente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>