force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Telereleve_sup_5__c.field-meta.xml
<CustomField>
    <fullName>Telereleve_sup_5__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Telereleve_sup_5</description>
    <label>Telereleve_sup_5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>