force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Type_de_compteur__c.field-meta.xml
<CustomField>
    <fullName>Type_de_compteur__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Type de compteur</description>
    <label>Type de compteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>