force-app/main/default/objects/SM_CalculPrestationMatrice__mdt/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Urgent</description>
    <label>Urgent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>